; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_readahead.c_get_init_ra_size.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_readahead.c_get_init_ra_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @get_init_ra_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_init_ra_size(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i64 @roundup_pow_of_two(i64 %6)
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = udiv i64 %9, 32
  %11 = icmp ule i64 %8, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i64, i64* %5, align 8
  %14 = mul i64 %13, 4
  store i64 %14, i64* %5, align 8
  br label %26

15:                                               ; preds = %2
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %4, align 8
  %18 = udiv i64 %17, 4
  %19 = icmp ule i64 %16, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %15
  %21 = load i64, i64* %5, align 8
  %22 = mul i64 %21, 2
  store i64 %22, i64* %5, align 8
  br label %25

23:                                               ; preds = %15
  %24 = load i64, i64* %4, align 8
  store i64 %24, i64* %5, align 8
  br label %25

25:                                               ; preds = %23, %20
  br label %26

26:                                               ; preds = %25, %12
  %27 = load i64, i64* %5, align 8
  ret i64 %27
}

declare dso_local i64 @roundup_pow_of_two(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
